# tasky-league

./: Cargo.toml  README.md  algorithm.tldr  sqlx-data.json
macros/: Cargo.toml
macros/src/: lib.rs
migrations/: 20230120133058_setup_players_table.down.sql  20230120133058_setup_players_table.up.sql  20230120133128_setup_jurors_table.down.sql  20230120133128_setup_jurors_table.up.sql  20230120134528_setup_players_info_table.down.sql  20230120134528_setup_players_info_table.up.sql  20230120141202_setup_players_preferences_table.down.sql  20230120141202_setup_players_preferences_table.up.sql
src/: main.rs
src/database/: context.rs  mod.rs  repo.rs
src/database/repos/: jurors_repo.rs  mod.rs  players_info_repo.rs  players_repo.rs
src/extensions/: handlers.rs  mod.rs
src/handlers/: mod.rs  prelude.rs  setup.rs
src/handlers/messages/: commands.rs  mod.rs  register.rs  unexpected.rs
src/handlers/messages/register/: mod.rs  player.rs
src/handlers/messages/register/juror/: already.rs  mod.rs  not_a_player.rs  player.rs
src/handlers/messages/register/not_a_player/: mod.rs  received_gender.rs  register.rs  unexpected.rs
src/handlers/messages/register_dialogue/: finish_register.rs  mod.rs  received_gender.rs  register.rs
src/handlers/messages/role/: arash.rs  mod.rs  no_role.rs
src/handlers/messages/search/: mod.rs  not_a_player.rs  player.rs
src/handlers/messages/start/: juror.rs  mod.rs  newbie.rs  player.rs
src/handlers/role_based/role/: mod.rs
src/roles/: arash.rs  juror.rs  mod.rs  player.rs
