[workspace]
members = ["macros"]

[package]
name = "tasky-league"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
macros = { version = "0.1.0", path = "macros" }
engineer = "0.1.3"
anyhow = "1.0.68"
thiserror = "1.0.38"
dotenvy = "0.15.6"
async-trait = "0.1.62"
strum = "0.24"
strum_macros = "0.24"
serde_json = { version = "1.0", features = ["raw_value"] }
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["full"] }
# tokio + rustls
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "time",
    "tls",
    "offline",
] }
