[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
syn = "1.0"
quote = "1.0"
darling = "0.14.2"
proc-macro2 = "1.0"
convert_case = "0.6.0"

[lib]
proc-macro = true
